core/engine/tests/snapshots/engine__clinical-pathway-selection_0.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  followupFrequency: daily
  recommendedMonitoring:
    - comprehensive_vitals
    - medication_adherence
    - lifestyle_factors
    - specialist_consultation
  selectedPathway: intensive
trace:
  comorbidityCheck:
    id: comorbidityCheck
    input:
      evaluation:
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
    name: comorbidityEvaluation
    order:
      "$serde_json::private::Number": "2"
    output:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    performance: "[perf]"
    traceData:
      comorbidityCount:
        result:
          "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        result:
          "$serde_json::private::Number": "9"
      hasHighRiskComorbidity:
        result: true
      totalRiskScore:
        result:
          "$serde_json::private::Number": "17"
  diagnoseTable:
    id: diagnoseTable
    input:
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
    name: diagnosisEvaluation
    order:
      "$serde_json::private::Number": "1"
    output:
      evaluation:
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        patient.primaryDiagnosis: heart_failure
        patient.severityScore:
          "$serde_json::private::Number": "3"
      rule:
        _id: r1
        "patient.primaryDiagnosis[i1]": "'heart_failure'"
        "patient.severityScore[i2]": "> 2"
  finalPathwaySwitch:
    id: finalPathwaySwitch
    input:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        additionalRiskScore:
          "$serde_json::private::Number": "2"
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
        patientRiskCategory: moderate
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    name: pathwaySelection
    order:
      "$serde_json::private::Number": "4"
    output:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        additionalRiskScore:
          "$serde_json::private::Number": "2"
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
        patientRiskCategory: moderate
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    performance: "[perf]"
    traceData:
      statements:
        - id: intensive
  input:
    id: input
    input: ~
    name: request
    order:
      "$serde_json::private::Number": "0"
    output:
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
    performance: "[perf]"
    traceData: ~
  intensivePathway:
    id: intensivePathway
    input:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        additionalRiskScore:
          "$serde_json::private::Number": "2"
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
        patientRiskCategory: moderate
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    name: intensivePathway
    order:
      "$serde_json::private::Number": "5"
    output:
      followupFrequency: daily
      recommendedMonitoring:
        - comprehensive_vitals
        - medication_adherence
        - lifestyle_factors
        - specialist_consultation
      selectedPathway: intensive
    performance: "[perf]"
    traceData:
      followupFrequency:
        result: daily
      recommendedMonitoring:
        result:
          - comprehensive_vitals
          - medication_adherence
          - lifestyle_factors
          - specialist_consultation
      selectedPathway:
        result: intensive
  patientFactorsTable:
    id: patientFactorsTable
    input:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    name: patientFactorsEvaluation
    order:
      "$serde_json::private::Number": "3"
    output:
      comorbidityCount:
        "$serde_json::private::Number": "3"
      comorbidityRiskScore:
        "$serde_json::private::Number": "9"
      evaluation:
        additionalRiskScore:
          "$serde_json::private::Number": "2"
        baseRiskScore:
          "$serde_json::private::Number": "8"
        clinicalDomain: cardiac
        patientRiskCategory: moderate
      hasHighRiskComorbidity: true
      patient:
        age:
          "$serde_json::private::Number": "72"
        bmi:
          "$serde_json::private::Number": "24"
        comorbidities:
          - diabetes
          - hypertension
          - kidney_disease
        currentMedications:
          - dosage: 10mg
            frequency: daily
            name: Lisinopril
          - dosage: 500mg
            frequency: twice daily
            name: Metformin
          - dosage: 40mg
            frequency: daily
            name: Furosemide
        id: P1234567
        labResults:
          bnp:
            "$serde_json::private::Number": "450"
          creatinine:
            "$serde_json::private::Number": "1.4"
          hba1c:
            "$serde_json::private::Number": "7.8"
          potassium:
            "$serde_json::private::Number": "4.2"
        primaryDiagnosis: heart_failure
        severityScore:
          "$serde_json::private::Number": "3"
        vitalSigns:
          bloodPressure:
            diastolic:
              "$serde_json::private::Number": "85"
            systolic:
              "$serde_json::private::Number": "142"
          heartRate:
            "$serde_json::private::Number": "88"
          oxygenSaturation:
            "$serde_json::private::Number": "94"
          temperature:
            "$serde_json::private::Number": "37.1"
      totalRiskScore:
        "$serde_json::private::Number": "17"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "1"
      reference_map:
        patient.age:
          "$serde_json::private::Number": "72"
        patient.bmi:
          "$serde_json::private::Number": "24"
      rule:
        _id: r2
        "patient.age[i1]": "> 70"
        "patient.bmi[i2]": "< 25"
